# AstroMark

./: .gitignore  Cargo.toml  astromark.desktop  i18n.toml  readme.md  rustfmt.toml
src/: app.rs  init.rs  main.rs  trans.rs  utils.rs
src/app/: dialog.rs  flags.rs  message.rs  state.rs
src/app/state/: editor.rs  home.rs
src/utils/: cfg.rs  init.rs
src/utils/cfg/: flags.rs  recent.rs  script.rs
src/utils/cfg/script/: color.rs  engine.rs  keybinds.rs
translations/en-US/: astromark.ftl
