[package]
name = "astromark"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8"
clap = "4.5"
dirs = "6"
open = "5.3"

rhai = { version = "1.21.0", features = ["sync", "f32_float"] }

# (de)serialization
bincode = "1.3"
serde = "1"

# Translations
i18n-embed-fl = "0.9"
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"]}
rust-embed = "8"
unic-langid = "0.9"

# Logging 
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.cosmic-files]
git = "https://github.com/pop-os/cosmic-files.git"
default-features = false
features = ["wgpu"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
	"a11y",
	"multi-window",
	"tokio",
	"winit",
	"wgpu",
	"markdown",
	"highlighter",
]

[profile.dev.package."*"]
opt-level = 3
